# notify-cli

./: Cargo.toml  LICENSE
src/: main.rs  notify.rs
