[package]
name = "notify-cli"
description = "Reserved crate for future use."
license = "MIT"
repository = "https://github.com/nebulaa44/notify-cli/"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.0.18"
features = ["derive"]

[dependencies.notify-rust]
version = "4.5.10"